welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:16: error: Unmatched closing brace '}' ignored here
}
^